[metadata]
name = wafec.fi.hypothesis
author = Wallace
author-email = wallacefcardoso@gmail.com
description-file = README.md
python-requires = >=3.6
version = 0.2.3
classifier =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
install_requires =
    requests>=2.24.0
    wrapt>=1.12.1
    hypothesis>=5.33.0
    flask>=1.1.2
    SQLAlchemy>=1.3.19
    PyMySQL>=0.10.0
    Flask-RESTful>=0.3.8
